--- a/package.json
+++ b/package.json
@@ -31,15 +31,17 @@
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/forms": "^0.5.10",
     "@types/nodemailer": "^6.4.14",
-    "@upstash/redis": "^1.28.4",
+    "@upstash/redis": "^1.34.8",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "critters": "^0.0.23",
     "crypto-js": "^4.2.0",
     "cva": "^0.0.0",
     "drizzle-orm": "^0.43.1",
     "framer-motion": "^11.0.6",
+    "helmet": "^8.1.0",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.331.0",
     "next": "^15.3.1",
@@ -59,7 +61,7 @@
     "shadcn-ui": "^0.9.5",
     "tailwind-merge": "^2.2.1",
     "tsx": "^4.7.1",
-    "zod": "^3.22.4"
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -68,14 +70,17 @@
     "@types/node": "^20",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
+    "@vitest/coverage-c8": "^0.33.0",
     "dotenv": "^16.5.0",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
+    "msw": "^2.7.5",
     "postcss": "^8",
     "postcss-import": "^16.0.1",
     "postcss-nesting": "^12.0.2",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^3.1.2"
   }
 }
