--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "performance": "tsx scripts/performance-check.ts",
     "bundle-size": "npm run build && npx bundlesize",
     "db:health": "tsx scripts/database-health.ts",
+    "migrate": "tsx scripts/migrate.ts",
+    "migrate:status": "tsx scripts/migrate.ts status",
+    "migrate:run": "tsx scripts/migrate.ts run",
+    "migrate:verify": "tsx scripts/migrate.ts verify",
     "deps:check": "depcheck",
     "clean": "rm -rf .next out dist",
     "clean:install": "rm -rf node_modules package-lock.json && npm install",
@@ -48,22 +52,32 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.8",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@sentry/nextjs": "^9.31.0",
+    "@sentry/tracing": "^7.120.3",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.8",
+    "@types/dompurify": "^3.0.5",
+    "@types/jsdom": "^21.1.7",
     "@types/nodemailer": "^6.4.14",
+    "@types/qrcode": "^1.5.5",
     "@upstash/redis": "^1.34.8",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "cva": "^0.0.0",
+    "dompurify": "^3.2.6",
     "drizzle-orm": "^0.43.1",
+    "drizzle-zod": "^0.8.2",
+    "jsdom": "^26.1.0",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.331.0",
     "next": "^15.3.1",
     "nodemailer": "^6.9.10",
+    "otpauth": "^9.4.0",
     "postgres": "^3.4.5",
     "prism-react-renderer": "^2.3.1",
+    "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-intersection-observer": "^9.8.0",
@@ -73,6 +87,7 @@
     "remark-gfm": "^4.0.0",
     "server-only": "^0.0.1",
     "shadcn-ui": "^0.9.5",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^2.2.1",
     "tsx": "^4.7.1",
     "web-vitals": "^4.2.4",
